--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ pre-commit:
   script:
     - date
     # install necessary packages:
-    - apk add --no-cache bash git npm py3-pip python3-dev
+    - apk add --no-cache bash gcc git libc-dev npm py3-pip python3-dev
     - pip3 install pre-commit
     - pre-commit --version
     - pre-commit run --all-files
