fixed ansible play books

--- a/ansible_playbooks/ubuntu_20.04/play_gitolite_home2zfs_filesystem.yaml
+++ b/ansible_playbooks/ubuntu_20.04/play_gitolite_home2zfs_filesystem.yaml
@@ -2,6 +2,7 @@
 # ansible-playbook --ask-vault-pass -v play_gitolite_home2zfs_filesystem.yaml
 
 - name: gitolite home -> zfs filesystem
+  hosts: all
   become: yes
   tasks:
     - include: task_gitolite_home2zfs_filesystem.yaml
