--- a/ansible_playbooks/ubuntu_20.04/configs/gitolite.conf
+++ b/ansible_playbooks/ubuntu_20.04/configs/gitolite.conf
@@ -20,6 +20,7 @@
     # SSLCompression on
 	<VirtualHost _default_:443>
 		ServerAdmin webmaster@localhost
+		#ServerName www.example.com
 		DocumentRoot /var/www/gitolite
 		<Directory /var/www/gitolite>
 		  Options       None
@@ -27,14 +28,25 @@
 		  Order         allow,deny
 		  Allow         from all
 		</Directory>
+
 		SuexecUserGroup git git
-		ScriptAlias /gitolite/ /var/www/bin/gitolite-suexec-wrapper.sh/
-		<Location /gitolite>
+		ScriptAlias /www/ /var/www/bin/gitolite_web_interface.py
+		<Location /www>
 		  AuthType Basic
 		  AuthName "gitolite access is required"
 		  Require valid-user
 		  AuthUserFile /etc/apache2/gitolite.passwd
 		</Location>
+
+		SuexecUserGroup git git
+		ScriptAlias /git/ /var/www/bin/gitolite-suexec-wrapper.sh/
+		<Location /git>
+		  AuthType Basic
+		  AuthName "gitolite access is required"
+		  Require valid-user
+		  AuthUserFile /etc/apache2/gitolite.passwd
+		</Location>
+
 		DAVLockDB /var/www/DAVLock
 		<Directory /var/www/gitolite/dav>
 		  Order Allow,Deny
