--- a/ansible_playbooks/ubuntu_20.04/task_install_riaf_configuration_gitolite_web_interface.yaml
+++ b/ansible_playbooks/ubuntu_20.04/task_install_riaf_configuration_gitolite_web_interface.yaml
@@ -22,6 +22,7 @@
           'help': True,
           'info': True,
           'mngkey': True,
+          'creategroup': True,
           'createrepo': True}
     group: "{{ gitolite_user }}"
     marker: '# {mark} special setting'
