--- a/ansible_playbooks/ubuntu_20.04/task_install_riaf_configuration_gitolite_web_interface.yaml
+++ b/ansible_playbooks/ubuntu_20.04/task_install_riaf_configuration_gitolite_web_interface.yaml
@@ -1,15 +1,29 @@
-# https://docs.ansible.com/ansible/2.5/modules/get_url_module.html
+# https://docs.ansible.com/ansible/2.5/modules/git_module.html
+# https://docs.ansible.com/ansible/2.5/modules/file_module.html
+# https://docs.ansible.com/ansible/2.5/modules/shell_module.html
 # https://docs.ansible.com/ansible/2.5/modules/blockinfile_module.html
 
 # gitolite_web_interface.py https://github.com/dlr-pa/gitolite_web_interface
-- name: 'install gitolite_web_interface.py'
-  get_url:
-    backup: yes
-    dest: /var/www/bin/gitolite_web_interface.py
+- name: 'get gitolite_web_interface repository'
+  git:
+    depth: 1
+    dest: /tmp/gitolite_web_interface
+    repo: https://github.com/dlr-pa/gitolite_web_interface.git
+- name: create gitolite_web_interface_mod directory in server directory
+  file:
     group: "{{ gitolite_user }}"
     mode: 0700
     owner: "{{ gitolite_user }}"
-    url: https://raw.githubusercontent.com/dlr-pa/gitolite_web_interface/master/gitolite_web_interface.py
+    path: /var/www/bin/gitolite_web_interface_mod/
+    state: directory
+- name: 'install gitolite_web_interface_mod'
+  shell: install --group="{{ gitolite_user }}" --mode=0600 --owner="{{ gitolite_user }}" --preserve-timestamps --target-directory=/var/www/bin/gitolite_web_interface_mod/ gitolite_web_interface_mod/*.py
+  args:
+    chdir: /tmp/gitolite_web_interface
+- name: 'install gitolite_web_interface.py'
+  shell: install --group="{{ gitolite_user }}" --mode=0700 --owner="{{ gitolite_user }}" --preserve-timestamps --target-directory=/var/www/bin/ gitolite_web_interface.py
+  args:
+    chdir: /tmp/gitolite_web_interface
 - name: 'adapt gitolite_web_interface.py'
   blockinfile:
     backup: yes
@@ -32,3 +46,7 @@
     owner: "{{ gitolite_user }}"
     path: /var/www/bin/gitolite_web_interface.py
     state: present
+- name: remove gitolite_web_interface repository
+  file:
+    state: absent
+    path: /tmp/gitolite_web_interface
