--- a/ansible_playbooks/ubuntu_20.04/play_update.yaml
+++ b/ansible_playbooks/ubuntu_20.04/play_update.yaml
@@ -5,3 +5,4 @@
   tasks:
     - include: task_update.yaml
     - include: task_install_riaf_fuse_git_bare_fs.yaml
+    - include: task_install_riaf_gitolite_web_interface.yaml
