--- a/ansible_playbooks/ubuntu_20.04/play_install_riaf.yaml
+++ b/ansible_playbooks/ubuntu_20.04/play_install_riaf.yaml
@@ -44,6 +44,10 @@
       prompt: "path to the script update_list_all_users"
       default: "configs/update_list_all_users"
       private: no
+    - name: server_timestamping_script
+      prompt: "path to the server_timestamping script"
+      default: "configs/server_timestamping"
+      private: no
   tasks:
     - include: task_install_riaf_packages.yaml
     - include: task_install_riaf_configuration_gitolite.yaml
@@ -55,5 +59,6 @@
     - include: task_install_riaf_gitolite_web_interface.yaml
     - include: task_install_riaf_configuration_gitolite_web_interface.yaml
     - include: task_install_riaf_configuration_apache_gitolite_2.yaml
+    - include: task_install_riaf_gitolite_add_trigger_server_timestamping.yaml
   handlers:
     - include: handler_install_riaf.yaml
