--- a/ansible_playbooks/ubuntu_20.04/play_install_riaf.yaml
+++ b/ansible_playbooks/ubuntu_20.04/play_install_riaf.yaml
@@ -59,6 +59,7 @@
     - include: task_install_riaf_gitolite_web_interface.yaml
     - include: task_install_riaf_configuration_gitolite_web_interface.yaml
     - include: task_install_riaf_configuration_apache_gitolite_2.yaml
+    - include: task_install_pydabu.yaml
     - include: task_install_riaf_gitolite_add_trigger_server_timestamping.yaml
   handlers:
     - include: handler_install_riaf.yaml
