--- a/ansible_playbooks/ubuntu_20.04/configs/gitolite.conf
+++ b/ansible_playbooks/ubuntu_20.04/configs/gitolite.conf
@@ -65,6 +65,10 @@
 		  </LimitExcept>
 		</Directory>
 
+		<Directory /var/www/gitolite/dabu>
+		  Options +Indexes
+		</Directory>
+
 		# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 		# error, crit, alert, emerg.
 		# It is also possible to configure the loglevel for particular
