--- a/ansible_playbooks/ubuntu_20.04/task_install_riaf_configuration_apache_gitolite_1.yaml
+++ b/ansible_playbooks/ubuntu_20.04/task_install_riaf_configuration_apache_gitolite_1.yaml
@@ -69,13 +69,23 @@
   become_method: sudo
   become_user: '{{ gitolite_user }}'
 
-- name: add fuse mount in /etc/fstab
+- name: add fuse mount dav in /etc/fstab
   mount:
     backup: yes
     boot: yes
     fstype: fuse.fuse_git_bare_fs
     opts: uid=git,gid=git,tree,allow_other,get_user_list_from_gitolite,provide_htaccess,root_object=master,gitolite_user_file={{ gitolite_home }}/dav_users,file_st_modes=33184=33256=41471=16872,default_permissions,nofail,ro
     path: /var/www/gitolite/dav
+    src: "{{ gitolite_home }}/repositories"
+    state: mounted
+
+- name: add fuse mount dabu in /etc/fstab
+  mount:
+    backup: yes
+    boot: yes
+    fstype: fuse.fuse_git_bare_fs
+    opts: uid=git,gid=git,tree,allow_other,root_object=landing_page,gitolite_user_file={{ gitolite_home }}/dav_users,file_st_modes=33184=33256=41471=16872,default_permissions,nofail,ro
+    path: /var/www/gitolite/dabu
     src: "{{ gitolite_home }}/repositories"
     state: mounted
 
