--- a/ansible_playbooks/ubuntu_20.04/play_install_riaf.yaml
+++ b/ansible_playbooks/ubuntu_20.04/play_install_riaf.yaml
@@ -61,6 +61,7 @@
     - include: task_install_riaf_fuse_git_bare_fs.yaml
     - include: task_install_riaf_enable_apache_modules.yaml
     - include: task_install_riaf_configuration_apache.yaml
+    - include: task_install_riaf_user_management_configuration.yaml
     - include: task_install_riaf_configuration_apache_gitolite_1.yaml
     - include: task_install_riaf_gitolite_web_interface.yaml
     - include: task_install_riaf_configuration_gitolite_web_interface.yaml
