--- a/.rstcheck.cfg
+++ b/.rstcheck.cfg
@@ -1,5 +1,3 @@
 [rstcheck]
 # adapt for sphinx
-ignore_directives=only,toctree
-ignore_roles=ref,download
-ignore_messages=(Unknown target name: "sskm"\.$)
+ignore_messages=(Unknown target name: "sskm|pydabu"\.$)
