--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,12 @@ variables:
   APT_GET_INSTALL: "apt-get install --no-install-recommends -q -y"
 
 stages:
+  - pre
   - build
   - deploy
 
 pre-commit:
-  stage: build
+  stage: pre
   image:
     # https://hub.docker.com/_/alpine
     name: alpine:latest
@@ -18,6 +19,18 @@ pre-commit:
     - pip3 install pre-commit
     - pre-commit --version
     - pre-commit run --all-files
+
+pycodestyle:
+  stage: pre
+  image:
+    # https://hub.docker.com/_/alpine
+    name: alpine:latest
+  script:
+    - date
+    - apk add --no-cache py3-pycodestyle
+    # check PEP 8 code style (pycodestyle was formerly called pep8)
+    - pycodestyle --version
+    - pycodestyle --show-source --show-pep8 --statistics $(find -name "*.py")
 
 build_pages:
   stage: build
@@ -65,3 +78,20 @@ pages:
       - document_pdf.svg
       - pages.svg
       - public
+
+deploy_to_github:
+  stage: deploy
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  image:
+    # https://hub.docker.com/_/alpine
+    name: alpine:latest
+  script:
+    - date
+    - apk add --no-cache git openssh
+    - mkdir ~/.ssh && chmod 700 ~/.ssh
+    - ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+    - mv $github_deploy_key ~/.ssh/id_ed25519 && chmod 600 ~/.ssh/id_ed25519
+    - repopath=$(mktemp -d)
+    - git clone --mirror ${CI_REPOSITORY_URL} $repopath
+    - (cd $repopath && git push --prune --mirror git@github.com:dlr-pa/riaf.git)
