added creation of source_code.svg in .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,7 @@ build_pages:
     - pip3 install anybadge
     - anybadge -l "document as" -v html -f pages.svg -c fuchsia -o
     - anybadge -l "document as" -v pdf -f document_pdf.svg -c orange -o
+    - anybadge -l "source" -v code -f source_code.svg -c lightgrey -o
   # store data as artifacts (e. g. used by pages):
   artifacts:
     expire_in: 1 hrs
@@ -60,6 +61,7 @@ build_pages:
       - document_pdf.svg
       - pages.svg
       - public
+      - source_code.svg
 
 pages:
   stage: deploy
@@ -78,6 +80,7 @@ pages:
       - document_pdf.svg
       - pages.svg
       - public
+      - source_code.svg
 
 deploy_to_github:
   stage: deploy
