--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,7 @@ deploy_to_github:
   stage: deploy
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_SERVER_HOST == "gitlab.com"
   image:
     # https://hub.docker.com/_/alpine
     name: alpine:latest
